# linalg_power_rankings

./: .dockerignore  .gitignore  Dockerfile  docker-compose.dev.yml  fly.toml
client/: index.html  package-lock.json  package.json
client/src/: App.css  App.tsx  index.css
client/src/components/: Plot.tsx
server/: pyproject.toml
server/fastapi_api/: main.py
server/fastapi_api/data/: nfl_2024_manual.csv
server/fastapi_api/routers/: rankings.py
