[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.122.0",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pathlib>=1.0.1",
    "pydantic>=2.12.4",
    "typing>=3.10.0.0",
    "uvicorn[standard]",
]

[dependency-groups]
dev = [
    "uvicorn>=0.38.0",
]
